# firstbase

./: .coname  .filter  .firstbase-init  .firstbase-kbmap  .firstbase-kbmap-jpb  AUTHORS  BIGE  COPYRIGHT  ChangeLog  LICENSE  Makefile.in  README  README.md  acconfig.h  configure  configure.in
applications/: APPLICATIONS  Makefile.in  mkapplications
applications/phone/: Lname.idicti  MAIN  Makefile.in  Phone.auto  Phone.ddict  Phone.emit  README
applications/rolodex/: Makefile.in  README  coname.idicti  coname.idictp  coname.sdict  lname.idicti  lname.idictl  lname.idictp  macro.m  merge.in  rolodex.auto  rolodex.ddict  rolodex.emit  rolodex.idictp  rolodex.sdict  rolodex.vdict  script.sql
applications/sample_src/: MAIN  Makefile.in  README  dbase.ddict  dbread.c  dbwrite.c  rectest.c  termtest.c
doc/: Makefile.in  README  fb-manual.ps
hlp/: Makefile.in  choosefield.hlp  dbdbas.hlp  dbdcnv.hlp  dbdind.hlp  dbdind1.hlp  dbdind2.hlp  dbdind3.hlp  dbdlbl.hlp  dbdprt.hlp  dbdscr.hlp  dbdupd.hlp  dirty.hlp  edcom.hlp  edfld.hlp  getby.hlp  help.hlp  nohelp.hlp  shell.hlp  v_edcom.hlp  v_edfld.hlp  xlong.hlp
man/: Intro.1  Intro.3  Intro.4  Intro.5  Intro.8  Makefile.in  addrec.3  autoindex.5  btree.4  buffers.3  bulkrec.3  checkfields.3  choice.5  coname.5  cpdb.8  cpidx.8  database.4  dballoc.3  dbargs.3  dbawk.1  dbcat.1  dbcgen.1  dbcheck.8  dbclean.1  dbdbas.1  dbdcnv.1  dbdind.1  dbdlbl.1  dbdmrg.1  dbdprt.1  dbdscr.1  dbdump.8  dbdupd.1  dbedit.1  dbemit.1  dbfilter.1  dbigen.1  dbjoin.1  dblgen.1  dbload.1  (+80 more)
menu/: MAIN  MAIN.help  Makefile.in  TOOLS  TOOLS.help  UNIX  UNIX.help
scripts/: CHMOD  COMBINE  CP  DBDUMP  DBRESTOR  DC  MKDIR  MORE  MV  Makefile.in  NROFF  RM  cleandb  cpdb  cpidx  fb  fb_pager  fbdate  fbdemo  makeview  makeview.awk  mvdb  mvidx  rmdb  rmidx  vi-end
src/: Makefile.in  TAGS
src/dbedit/: Makefile.in  addfield.c  cformula.c  dbdbas.c  dbdscr.c  dbedit.c  delete.c  dfield.c  display.c  docmd.c  edit.c  edit_add.c  editor.c  edt_fld.c  newrec.c  passwd.c  percent.c  putfield.c  scanput.c  scanset.c  undelete.c  visual.c  xcommand.c  xlong.c
src/dbigen/: Makefile.in  dbdind.c  dbigen.c  dicti.c  getby.c  index.c  itrace.c  mkbtree.c
src/dblgen/: Makefile.in  dbdlbl.c  dblgen.c  initlb.c
src/dbmerge/: Makefile.in  commands.c  cscreen.c  dbdmrg.c  dbmerge.c  editor.c  edt_line.c  edt_tokn.c  initmrg.c  mface.c  subscrn.c  t_fld_ed.c  writefil.c  xcommand.c
src/dbpgen/: Makefile.in  bump.c  dbcgen.c  dbdcnv.c  dbdprt.c  dbpgen.c  initpr.c  print.c  totpr.c
src/dbshell/: Makefile.in  dbshell.c  dbshell.c.9.2-9.3.patch  ecommand.c  execute.c  odbshell
src/dbsql/: Makefile.in  README  cr_index.c  cr_view.c  current.dbsql.lx.c  dbsql.c  dbsql.g.y  dbsql.h  dbsql.lx.c.yyflex_minor_version_5  dbsql.lx.l  dbsql_e.h  dbsql_v.h  dropidx.c  dropview.c  execute.c  expr.c  function.c  groupeac.c  h_lib.c  headers.c  helpsql.c  html.c  initsql.c  instance.c  librel.c  libsql.c  libsym.c  make_rel.c  mk_canon.c  new.dbsql.lx.c  node.c  r_distin.c  r_grp_by.c  r_ord_by.c  r_prepro.c  r_projec.c  r_select.c  r_subpro.c  recureac.c  reduce.c  (+20 more)
src/dbtools/: Makefile.in  dbastat.c  dbcat.c  dbcheck.c  dbclean.c  dbemit.c  dbfilter.c  dbjoin.c  dbload.c  dbls.c  dbmacro.c  dbpack.c  dbpasswd.c  dbregen.c  dbrestor.c  dbrload.c  dbwstat.c  fbtstmac.c  frmprint.c  scrprint.c  test.m
src/dbugen/: Makefile.in  dbdupd.c  dbugen.c  initu.c
src/dbvedit/: Makefile.in  addfield.c  custom.c  dbvedit.c  docmd.c  edit.c  edit_add.c  editor.c  edt_fld.c  ex_cho.c  ex_disp.c  ex_input.c  ex_limit.c  ex_sel.c  initvi.c  newrec.c  scanput.c
src/dbvemit/: Makefile.in  addfield.c  dbvemit.c  docmd.c  edit.c  edit_add.c  editor.c  edt_fld.c  initvi.c  newrec.c  output.c  put.c  scanput.c  showauto.c
src/dbvform/: Makefile.in  dbvform.c  f_node.c  plib.c  putfield.c
src/dbvi/: Makefile.in  cell.c  cformula.c  column.c  commands.c  cscreen.c  dbvi.c  edit_col.c  edit_row.c  editor.c  edt_cell.c  get_cdic.c  initvi.c  line_opn.c  makedef.c  owritefil.c  putfield.c  scanset.c  writefil.c  xcommand.c
src/include/: config.h.in  cx.h  dbacct.h  dbd.h  dbdmrg.h  dbdmrg_e.h  dbdmrg_v.h  dbdview.h  dbdvw_e.h  dbdvw_v.h  dbedit.h  dbpwd.h  dbutmp.h  dbve.h  dbve_ext.h  dbve_v.h  dbvf_ext.h  dbvf_v.h  dbvform.h  dbvi.h  dbvi_ext.h  dbvi_v.h  emit.h  error.h  fb.h  fb_ext.h  fb_proto.h  fb_vars.h  igen.h  input.h  interface.h  keyboard.h  keypad.h  (+29 more)
(+316 files in other folders)
